NeighborlyFrontEnd/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - neigh.danielabg.com
    secretName: hello-kubernetes-tls
  rules:
  - host: neigh.danielabg.com
    http:
      paths:
      - backend:
          serviceName: neighborly
          servicePort: 80
